--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "src/*.html",
   "scripts": {
     "server": "parcel src/*.html --open",
-    "deploy": "parcel build src/*.html",
+    "deploy": "parcel build src/*.html --public-url dist/",
     "clean": "node ./src/config/npm/clean.js",
     "dev": "npm run clean && npm run server",
-    "build": "npm run clean && npm run deploy"
+    "build": "npm run clean && npm run deploy",
+    "renderPartials": "node ./src/config/npm/renderPartials.js",
+    "postBuild": "node ./src/config/npm/postBuild.js"
   },
   "author": "mrMustachos",
   "repository": {
@@ -21,7 +23,7 @@
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "fs-extra": "^7.0.1",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.12.0",
     "node-sass-package-importer": "^5.3.1",
     "parcel-bundler": "^1.12.3",
     "posthtml": "^0.11.3",
@@ -35,8 +37,9 @@
     "flickity": "^2.2.0",
     "gsap": "^2.1.2",
     "imagesloaded": "^4.1.4",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.1",
     "lodash": "^4.17.11",
+    "posthtml-urls": "^1.0.0",
     "scrollmagic": "^2.0.6"
   }
 }
